<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/revenue"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_card"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:paddingTop="37dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="10dp"
        android:layout_height="120dp"
        android:text="@string/_14k_visitors"
        android:textSize="30sp"
        android:background="@drawable/button_background_revenue_1"
        android:layout_marginBottom="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="10dp"
        android:layout_height="120dp"
        android:text="@string/_900_usd"
        android:textSize="30sp"
        android:background="@drawable/button_background_revenue_1"
        android:layout_marginBottom="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="10dp"
        android:layout_height="120dp"
        android:text="14K Visitors"
        android:textSize="30dp"
        android:background="@drawable/button_background_revenue_1"
        android:layout_marginBottom="20dp"
        />


</LinearLayout>